--- a/unreal project files here/Modular_Dialogue_Sys/Config/DefaultEngine.ini
+++ b/unreal project files here/Modular_Dialogue_Sys/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Modular_Dialogue_Sys
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Base_Unreal_Files/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/Base_Unreal_Files/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -12,14 +12,15 @@ GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_Thi
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
-r.ReflectionMethod=1
+r.ReflectionMethod=0
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
+r.DynamicGlobalIlluminationMethod=0
 r.Lumen.TraceMeshSDFs=0
 r.Shadow.Virtual.Enable=1
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
+r.Nanite.ProjectEnabled=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
