--- a/unreal project files here/Modular_Dialogue_Sys/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/unreal project files here/Modular_Dialogue_Sys/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -198,7 +198,7 @@ bUseTreeViewForAnimationCurves=False
 AnimationCurveGroupingDelimiters="._/|\\"
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Base_Unreal_Files/ThirdPerson
+ContentBrowserTab1.SelectedPaths=/Game/Custom_Game_Files/Interfaces
 ContentBrowserTab2.SourcesExpanded=True
 ContentBrowserTab2.FavoritesAreaExpanded=False
 ContentBrowserTab2.PathAreaExpanded=True
@@ -273,10 +273,12 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Base_Unreal_Files/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Custom_Game_Files/Interfaces/DialogueHolder.DialogueHolder
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Custom_Game_Files/Characters/Main_Character.Main_Character
 OpenAssetsAtExit=/Game/Custom_Game_Files/Components/Dialogue_Manager.Dialogue_Manager
+OpenAssetsAtExit=/Game/Custom_Game_Files/Characters/Talking_NPC_Base.Talking_NPC_Base
+OpenAssetsAtExit=/Game/Custom_Game_Files/Components/Dialogue_Giver.Dialogue_Giver
+OpenAssetsAtExit=/Game/Custom_Game_Files/Interfaces/DialogueHolder.DialogueHolder
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -805,7 +807,86 @@ K2Node_VariableGet.DefaultValueCategory=True
 K2Node_VariableGet.Events=True
 EdGraph.Graph=True
 EdGraph.Inputs=True
-EdGraph.Outputs=True
+EdGraph.Outputs=False
+Dialogue_Giver_C.Variable=True
+Dialogue_Giver_C.Sockets=True
+Dialogue_Giver_C.Tags=True
+Dialogue_Giver_C.ComponentTick=True
+Dialogue_Giver_C.ComponentReplication=True
+Dialogue_Giver_C.Activation=True
+Dialogue_Giver_C.Cooking=True
+Dialogue_Giver_C.Events=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+Dialogue_Giver_C.Default=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Imports=True
+Blueprint.Interfaces=True
+Blueprint.Thumbnail=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.ComponentTick=True
+CameraComponent.PostProcess=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.ComponentTick=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+K2Node_CallFunction.Graph=True
+PropertyWrapper.Events=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -869,16 +950,17 @@ StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.Li
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[14]\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Custom_Game_Files/Interfaces/InteractibleObject
-MRUItem1=/Game/Custom_Game_Files/Interfaces/DialogueHolder
-MRUItem2=/Game/Custom_Game_Files/Components/Dialogue_Manager
-MRUItem3=/Game/Custom_Game_Files/Characters/Main_Character
-MRUItem4=/Game/Base_Unreal_Files/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem5=/Game/Base_Unreal_Files/ThirdPerson/Input/IMC_Default
-MRUItem6=/Game/Custom_Game_Files/Inputs/Interact
-MRUItem7=/Game/Custom_Game_Files/Characters/Talking_NPC_Base
-MRUItem8=/Game/Base_Unreal_Files/ThirdPerson/Maps/ThirdPersonMap
-MRUItem9=/Game/Base_Unreal_Files/Characters/Mannequin_UE4/Animations/Jog_Fwd
+MRUItem0=/Game/Custom_Game_Files/Interfaces/DialogueHolder
+MRUItem1=/Game/Custom_Game_Files/Components/Dialogue_Giver
+MRUItem2=/Game/Custom_Game_Files/Characters/Talking_NPC_Base
+MRUItem3=/Game/Custom_Game_Files/Components/Dialogue_Manager
+MRUItem4=/Game/Custom_Game_Files/Characters/Main_Character
+MRUItem5=/Game/Custom_Game_Files/Interfaces/InteractibleObject
+MRUItem6=/Game/Base_Unreal_Files/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem7=/Game/Base_Unreal_Files/ThirdPerson/Input/IMC_Default
+MRUItem8=/Game/Custom_Game_Files/Inputs/Interact
+MRUItem9=/Game/Base_Unreal_Files/ThirdPerson/Maps/ThirdPersonMap
+MRUItem10=/Game/Base_Unreal_Files/Characters/Mannequin_UE4/Animations/Jog_Fwd
 
 [AssetEditorToolkitTabLocation]
 /Game/Base_Unreal_Files/Characters/Mannequin_UE4/Animations/Jog_Fwd.Jog_Fwd=1
@@ -887,6 +969,9 @@ MRUItem9=/Game/Base_Unreal_Files/Characters/Mannequin_UE4/Animations/Jog_Fwd
 /Game/Custom_Game_Files/Inputs/Interact.Interact=1
 /Game/Base_Unreal_Files/ThirdPerson/Input/IMC_Default.IMC_Default=1
 /Game/Base_Unreal_Files/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode=1
+/Game/Custom_Game_Files/Components/Dialogue_Manager.Dialogue_Manager=1
+/Game/Custom_Game_Files/Components/Dialogue_Giver.Dialogue_Giver=1
+/Game/Custom_Game_Files/Interfaces/DialogueHolder.DialogueHolder=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -2075,10 +2160,20 @@ TemplateSequenceEditorSettings=EnhancedInputDeveloperSettings.Modifier Default V
 UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup
-CapsuleComponent=StaticMeshActor.Physics.ConstraintsGroup
+CapsuleComponent=
 PlayerStart=StaticMeshActor.Physics.ConstraintsGroup
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Custom_Game_Files/Inputs/IA_Interact.IA_Interact
 InputAction=
+Talking_NPC_Base_C=StaticMeshActor.Physics.ConstraintsGroup
+SkeletalMeshComponent=StaticMeshActor.Physics.ConstraintsGroup
+Blueprint=StaticMeshActor.Physics.ConstraintsGroup
+Main_Character_C=StaticMeshActor.Physics.ConstraintsGroup
+K2Node_VariableGet=StaticMeshActor.Physics.ConstraintsGroup
+CharacterMovementComponent=StaticMeshActor.Physics.ConstraintsGroup
+K2Node_CallFunction=StaticMeshActor.Physics.ConstraintsGroup
+PropertyWrapper=StaticMeshActor.Physics.ConstraintsGroup
+Dialogue_Giver_C=
+EdGraph=StaticMeshActor.Physics.ConstraintsGroup
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
